feat: default values (toplevel class) strict strategy